...
import androidx.hilt.navigation.compose.hiltViewModel
import com.apkm.installer.R
import com.apkm.installer.domain.model.ApkmPackageInfo
import com.apkm.installer.presentation.theme.ApkMInstallerTheme

const val DETAIL_APP_NAME_TAG = "detail_app_name"
const val DETAIL_INSTALL_BUTTON_TAG = "detail_install_button"
const val DETAIL_PERMISSIONS_TAG = "detail_permissions_list"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun PackageDetailScreen(
    uri: Uri,
...
